fixed it to work with jdk17 and added a comment about how to run it